# project_testing

./: .gitignore  CMakeLists.txt  main.cpp
WEB/: api.js  auth.html  ayth.html  index.html  script.js  student.html  take_test.html  teacher.html
WEB/Static/CSS/: styles.css
WEB/Static/JS/: auth.js  student.js  take_test.js  teacher.js
client/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  client.csproj
client/Models/: Session.cs  TestModels.cs
client/Services/: ApiService.cs  TokenStorage.cs
client/Themes/: DarkTheme.xaml  LightTheme.xaml
client/Views/: LoginPage.xaml  LoginPage.xaml.cs  RegisterPage.xaml  RegisterPage.xaml.cs  StudentPage.xaml  StudentPage.xaml.cs  TeacherPage.xaml  TeacherPage.xaml.cs
server/: CMakeLists.txt  config.json_example  main.cpp
server/config/: JSONConfig.cpp  JSONConfig.hpp
server/database/: JSONDatabase.cpp  JSONDatabase.hpp
server/routes/: tests_routes.cpp  tests_routes.hpp  users_routes.cpp  users_routes.hpp
server/utils/: Routes.cpp  Routes.hpp  users_routes.cpp  utils.cpp  utils.hpp
